<resources>
    <string name="app_name">LazyIr</string>
    <string name="cntxMenuOk">OK</string>
    <string name="cntxMenuAdd">Ir codes</string>
    <string name="cntxMenuDelete">Delete</string>
    <string name="tab1">Console</string>
    <string name="tab2">Modules</string>
    <string name="tab3">Buttons</string>
    <string name="tab4">Console Editing</string>
    <string name="NotificationListen">NotificationListener</string>
    <string name="commands">Cmds</string>
    <string name="openDrawer">openDrawer</string>
    <string name="close_drawer">closeDrawer</string>
    <string name="removebtn">removeBtn</string>
    <string name="notPaired">notPaired</string>
    <string name="paired">paired</string>
    <string name="folderImg">folderImg</string>
    <string name="media_control">Media Control</string>
    <string name="clipboard_history">Clipboard History</string>
    <string name="share">Share</string>
    <string name="command">Command</string>
    <string name="touch_control">Touch Control</string>
    <string name="name">Name</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="unpair">unPair</string>
    <string name="pair">Pair</string>
    <string name="options">Options</string>
    <string name="add_new_command">add new command</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="run">run</string>
    <string name="save">Save</string>
    <string name="clear_all">Clear All</string>
</resources>
